--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,10 @@
 
+.container{
+    
+    
+}
 *{
+   
 margin: 0;
 padding: 0;
 box-sizing: border-box;
@@ -90,6 +95,8 @@ border:0.5px solid #336ea2
     
     margin-bottom: 4rem;
     padding: 1rem;
+   
+
 }
 
 #lessons h2 {
@@ -108,6 +115,7 @@ width: 150px;
 #lessons .les{
     width: 33%;
     padding: 0.5rem;
+    
 }
 #lessons .lessons h3 {
     background: #336ea2; margin-top: 1.5rem;
@@ -115,7 +123,10 @@ width: 150px;
     border:0.5px solid #062e51;
     color: #fff;
 }
-
+  #lessons .lessons .les{
+  transform: 5px;
+  transition:1.5s ease;
+ }
 
 /* teachers */
 #teachers{
@@ -137,6 +148,8 @@ text-align: center;
 #teachers .items .item{
     width: 33%;
     padding: 0.5rem;
+    transform: 5px; 
+    transition: 1.5s ease;
 
 }
 #contact{
@@ -163,6 +176,8 @@ background-color: limegreen;
  }
  .information{
     width: 70%;
+    text-align: center;
+    margin-right: 10px;
     
  }
  .mapouter {
@@ -175,9 +190,10 @@ background-color: limegreen;
 .gmap_canvas {
     overflow: hidden;
     background: none !important;
-    width: 400px;
-    height: 300px;
-    margin-left: 25px;
+    width: 350px;
+    height: 250px;
+    margin-left: 45px;
+
 }
 
 .gmap_iframe {
